[package]
name = "winseek"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
log = "0.4.20"
sublime_fuzzy = "0.7.0"
pretty_env_logger = "0.5.0"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse"] }
epaint = "0.22.0"
once_cell = "1.18.0"
systray = "0.4.0"
image = { version = "0.24.7", default-features = false, features = ["png"] }
